[tool.poetry]
name = "Ask me anything about the uploaded PDF document"
version = "0.1.0"
description = "Dialogue with your Documents for Data-Driven Decision Making"
authors = ["Josoroma <pablo@josoroma.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
